--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -257,3 +257,21 @@ input[type=number]::-webkit-outer-spin-button {
     text-align: center;
     border-bottom: 1px solid white;
 }
+
+/***********************************************************
+** Errors
+************************************************************/
+
+.text-error{
+    color: red;
+    font-size: 20px;
+    text-align: center;
+    width: 100%;
+}
+
+.text-note{
+    color: #3498db;
+    font-size: 20px;
+    text-align: center;
+    width: 100%;
+}
