--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -258,6 +258,12 @@ input[type=number]::-webkit-outer-spin-button {
     border-bottom: 1px solid white;
 }
 
+.sub-title{
+    color: rgb(103, 103, 103);
+    text-align: center;
+    margin-top: 20px;
+}
+
 /***********************************************************
 ** Errors
 ************************************************************/
